# Bamboo

./: Bamboo.def  CMakeLists.txt  Readme.md
include/Bamboo/: Allocator.hpp  ApplicationAPI.hpp  Bamboo.hpp  Base.hpp  Component.hpp  Entity.hpp  EntityAPI.hpp  Input.hpp  Logger.hpp  Material.hpp  Math.hpp  Script.hpp  WorldAPI.hpp
include/Bamboo/Assets/: AssetManager.hpp  AssetManagerAPI.hpp  Material.hpp  MaterialAPI.hpp  Mesh.hpp  MeshAPI.hpp  Texture.hpp
include/Bamboo/Components/: MeshComponent.hpp  MeshComponentAPI.hpp  Rigidbody2DComponentAPI.hpp  SpriteRendererComponent.hpp  SpriteRendererComponentAPI.hpp  TransformComponentAPI.hpp
include/Bamboo/ScriptRegistry/: ScriptClass.hpp  ScriptRegistry.hpp  TypeName.hpp
include/Panda/: Base.hpp  ScriptClass.hpp  ScriptRegistry.hpp
include/Panda/Manifest/: ScriptBundleManifest.hpp
scripts/: install.sh
src/Bamboo/: Allocator.cpp  ApplicationAPI.cpp  Entity.cpp  EntityAPI.cpp  Input.cpp  Logger.cpp  Material.cpp  Math.cpp  World.cpp  WorldAPI.cpp
src/Bamboo/Assets/: AssetManager.cpp  AssetManagerAPI.cpp  Material.cpp  MaterialAPI.cpp  Mesh.cpp  MeshAPI.cpp  Texture.cpp
src/Bamboo/Components/: MeshComponent.cpp  MeshComponentAPI.cpp  Rigidbody2DComponent.cpp  Rigidbody2DComponentAPI.cpp  SpriteRendererComponent.cpp  SpriteRendererComponentAPI.cpp  TransformComponent.cpp  TransformComponentAPI.cpp
src/Bamboo/ScriptRegistry/: ScriptRegistry.cpp
src/Panda/: OuterScriptHook.cpp  OuterScriptHook.hpp  ScriptClassMaper.hpp
src/Panda/Manifest/: ScriptBundleManifest.hpp
